kubecost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/group.name: monitoring-alb-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/target-type: ip
  name: kube-cost
  namespace: kubecost
spec:
  ingressClassName: alb
  rules:
  - host: kubecost.ops.seungdobae.com
    http:
      paths:
      - backend:
          service:
            name: cost-analyzer-cost-analyzer
            port:
              number: 9090
        path: /
        pathType: Prefix
